# Packaging-Custom-Affinity-Propagation-Clustering

./: .gitignore  README.md  pyproject.toml
docs/: api.md  example.ipynb  hands_on.ipynb  installation.md
src/affinityprop/: __init__.py  _affinity_propagation.py
tests/: test_affinity_propagation.py
